@@ -2,6 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:five="http://namespaces.zope.org/five"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:zcml="http://namespaces.zope.org/zcml">
 
   <!-- zope.annotation is used in Zope 2.10 -->
@@ -27,5 +28,14 @@
       />
 
   <include package=".browser" />
+
+  <genericsetup:registerProfile
+      name="default"
+      title="Feedfeeder"
+      directory="profiles/default"
+      description="Profile for Feedfeeder"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      />
 
 </configure>
